--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -11,9 +11,10 @@
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
+			import mx.resources.ResourceManager;
 			
+			import net.vdombox.ide.common.events.PopUpWindowEvent;
 			import net.vdombox.ide.common.model._vo.LibraryVO;
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.common.view.components.button.AlertButton;
@@ -123,10 +124,12 @@
 			private function itemrenderer1_keyDownHandler(event:KeyboardEvent):void
 			{
 				if ( event.keyCode == Keyboard.DELETE )
-					Alert.Show( "You are wont to delete?", AlertButton.OK_No, this.parentApplication, removeactionRequest );
+					Alert.Show( resourceManager.getString( 'Scripts_General', 'delete_library' ),
+						resourceManager.getString( 'Scripts_General', 'delete_Renderer' ), 
+								AlertButton.OK_No, this.parentApplication, removeactionRequest );
 			}
 			
-			private function removeactionRequest( event : CloseEvent ) : void 
+			private function removeactionRequest( event : PopUpWindowEvent ) : void 
 			{
 				if ( event.detail == Alert.YES )
 				{
