git-svn-id: http://svn.vdombox.ru/flextools/trunk@8534 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
@@ -15,10 +15,10 @@
 			import mx.binding.utils.ChangeWatcher;
 			import mx.controls.Image;
 			import mx.core.UIComponent;
-			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			import mx.events.ResizeEvent;
 			
+			import net.vdombox.ide.common.events.PopUpWindowEvent;
 			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
 			import net.vdombox.ide.common.model._vo.AttributeVO;
 			import net.vdombox.ide.common.model._vo.ResourceVO;
@@ -356,9 +356,9 @@
 			{
 				Alert.setPatametrs( "Delete", "Cancel", VDOMImage.Delete );
 				
-				Alert.Show( "Are you sure want to delete " + nameAttribute + " ?",AlertButton.OK_No, this.parentApplication, deleteHandler);
+				Alert.Show( "Delete page", "Are you sure want to delete " + nameAttribute + " ?",AlertButton.OK_No, this.parentApplication, deleteHandler);
 				
-				function deleteHandler(event : CloseEvent) : void
+				function deleteHandler(event : PopUpWindowEvent) : void
 				{
 					if (event.detail == Alert.YES)
 					{
