git-svn-id: http://svn.vdombox.ru/flextools/trunk@8539 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMScrollBarSkin/VDOMHScrollBarTrackSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMScrollBarSkin/VDOMHScrollBarTrackSkin.mxml
@@ -51,5 +51,9 @@
     </s:states>
 
 	<!-- border/fill -->
-	<s:Rect top="0" bottom="0" left="0" right="0" minWidth="30" height="100%" alpha="0"/>
+	<s:Rect top="0" bottom="0" left="0" right="0" minWidth="30" height="100%" alpha="0">
+		<s:fill>
+			<s:SolidColor color="#000000"/>
+		</s:fill>
+	</s:Rect>
 </s:SparkSkin>
