--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/components/itemrenderers/PageTypeItemRenderer.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/components/itemrenderers/PageTypeItemRenderer.mxml
@@ -2,8 +2,9 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/mx"
-				
-				creationComplete="creationCompleteHandler()">
+				creationComplete="creationCompleteHandler()"
+				doubleClickEnabled="true"
+				doubleClick="itemrenderer1_doubleClickHandler(event)">
 
 	<fx:Script>
 		<![CDATA[
@@ -29,6 +30,12 @@
 				
 				currentState = value ? "selected" : "normal"
 			} 
+			
+			protected function itemrenderer1_doubleClickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new ItemRendererEvent( ItemRendererEvent.DOUBLE_CLICK ) );
+			}
+			
 		]]>
 	</fx:Script>
 
