--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMScrollBarSkin/VDOMVScrollBarTrackSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/VDOMScrollBarSkin/VDOMScrollBarSkin/VDOMVScrollBarTrackSkin.mxml
@@ -51,6 +51,10 @@
     </s:states>
 
     <!-- border/fill -->
-    <s:Rect top="0" bottom="0" left="0" right="0" width="100%" minHeight="30" alpha="0"/>
+    <s:Rect top="0" bottom="0" left="0" right="0" width="100%" minHeight="30" alpha="0">
+		<s:fill>
+			<s:SolidColor color="#000000"/>
+		</s:fill>
+	</s:Rect>
 	
 </s:SparkSkin>
