--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
@@ -11,6 +11,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.events.ItemRendererEvent;
 			import net.vdombox.ide.common.events.WindowEvent;
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMScrollBarSkin.VDOMVScrollBarSkin;
@@ -20,10 +21,16 @@
 				hostComponent.title = resourceManager.getString( 'Tree_General', 'create_page_title' );
 			}
 			
+			private function doubleClickHandler( event : ItemRendererEvent ) : void
+			{
+				dispatchEvent( new WindowEvent( WindowEvent.PERFORM_APPLY ) );
+			}
+			
 			protected function pageTypeList_creationCompleteHandler(event:FlexEvent):void
 			{
 				pageTypeList.scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
 				addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+				pageTypeList.addEventListener( ItemRendererEvent.DOUBLE_CLICK, doubleClickHandler, true, 0 , true );
 			}
 			
 			private function mouseWheelHandler( event : MouseEvent ) : void
