--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -5,7 +5,8 @@
 				width="100%"
 				minHeight="23"
 				contentBackgroundAlpha="0"
-				click="itemrenderer1_clickHandler(event)">
+				click="itemrenderer1_clickHandler(event)"
+				creationComplete="itemrenderer1_creationCompleteHandler(event)">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
@@ -16,6 +17,7 @@
 			import mx.collections.Sort;
 			import mx.controls.ComboBox;
 			import mx.core.UIComponent;
+			import mx.events.FlexEvent;
 			import mx.skins.halo.ComboBoxArrowSkin;
 			import mx.skins.spark.ComboBoxSkin;
 			
@@ -458,6 +460,21 @@
 			protected function itemrenderer1_clickHandler(event:MouseEvent):void
 			{
 				dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.CURRENT_ATTRIBUTE_CHANGED ))
+			}
+			
+			protected function itemrenderer1_creationCompleteHandler(event:FlexEvent):void
+			{
+				addEventListener( KeyboardEvent.KEY_DOWN, keyHandler, true, 0, true );
+			}
+			
+			private function keyHandler( event : KeyboardEvent ) : void
+			{
+				if ( event.keyCode == Keyboard.TAB )
+				{
+					dispatchEvent( new ObjectAttributesPanelEvent ( ObjectAttributesPanelEvent.SELECTED_ATTRIBUTE_CHANGED ) );
+					event.stopImmediatePropagation();
+					event.stopPropagation();
+				}
 			}
 			
 		]]>
