--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -64,7 +64,7 @@
 		<s:HGroup width="100%" height="100%" gap="0">
 			<s:List id="types" width="100%" height="100%" borderVisible="false" contentBackgroundAlpha="0"
 					dataProvider="{ typeData }"
-					itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.TypeItemRenderer"
+					itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.itemrenderer.TypeItemRenderer"
 					labelField="displayName" textAlign="center"
 					creationComplete="list_creationCompleteHandler(event)">
 				
