git-svn-id: http://svn.vdombox.ru/flextools/trunk@8547 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/InitialWindow.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/InitialWindow.mxml
@@ -47,6 +47,12 @@
 			{
 				dispatchEvent( new InitialWindowEvent( InitialWindowEvent.SUBMIT ) );
 			}
+			
+			protected function cancelButton_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent( new InitialWindowEvent( InitialWindowEvent.CANCEL ) );
+			}
+			
 		]]>
 	</fx:Script>
 
@@ -70,7 +76,11 @@
 		
 	<s:HGroup width="100%" horizontalAlign="right" paddingRight="40" gap="10" bottom="37">
 			
-		<button:VDOMButton id="exitButton" includeIn="loginView, progressView" 
+		<button:VDOMButton id="cancelButton" includeIn="progressView" 
+						   label="{ resourceManager.getString( 'LoginForm', 'cancel_button' ) }" minWidth="100"
+						   click="cancelButton_clickHandler(event)"/>
+		
+		<button:VDOMButton id="exitButton" includeIn="loginView" 
 				label="{ resourceManager.getString( 'LoginForm', 'quit_button' ) }" minWidth="100"
 				click="exitButton_clickHandler(event)"/>
 			
