--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx1:HDividedBox xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  xmlns:components="net.vdombox.ide.modules.events.view.components.*"
@@ -21,4 +21,4 @@
 		<components:EventsPanel id="eventsPanel"
 								width="100%" height="60%"/>
 	</mx1:VDividedBox>
-</mx1:HDividedBox>
+</s:HGroup>
