--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -39,8 +39,9 @@
 					return _selectedLanguage as LocaleVO;
 				else if ( selectLang.selectedItem )
 					return selectLang.selectedItem as LocaleVO;
-				else
+				else if ( selectLang.dataProvider )
 					return ( selectLang.dataProvider as ArrayList ).source[0] as LocaleVO;
+				return null;
 			}
 
 			public function set selectedLanguage( value : LocaleVO ) : void
