--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -61,18 +61,18 @@
 			</s:fill>
 		</s:Rect>
 		
-		<s:HGroup width="100%" height="100%" gap="0">
-			<s:List id="types" width="100%" height="100%" borderVisible="false" contentBackgroundAlpha="0"
-					dataProvider="{ typeData }"
-					itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.itemrenderer.TypeItemRenderer"
-					labelField="displayName" textAlign="center"
-					creationComplete="list_creationCompleteHandler(event)">
-				
-				<s:layout>
-					<s:VerticalLayout variableRowHeight="true" gap="0" horizontalAlign="center"/>
-				</s:layout>
-			</s:List>
-		</s:HGroup>
+		<s:List id="types" top="5"
+				width="100%" height="100%" 
+				labelField="displayName" textAlign="center"
+				borderVisible="false" contentBackgroundAlpha="0"
+				dataProvider="{ typeData }"
+				itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.itemrenderer.TypeItemRenderer"
+				creationComplete="list_creationCompleteHandler(event)">
+			
+			<s:layout>
+				<s:VerticalLayout variableRowHeight="true" gap="0" horizontalAlign="center"/>
+			</s:layout>
+		</s:List>
 		
 	</s:Group>
 	
