git-svn-id: http://svn.vdombox.ru/flextools/trunk@8559 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -522,7 +522,7 @@
 				{
 					xmlRow.appendChild(
 						<cell name={dataGridCell.dataField}>
-						{StringUtils.getCDataParserString( item[dataGridCell.dataField] )}
+						{item[dataGridCell.dataField]}
 						</cell> );
 				}
 				
@@ -554,7 +554,7 @@
 								break;
 							}
 						}
-						else
+						else 
 						{
 							queue.addRequest(
 								item['GUID'],
