git-svn-id: http://svn.vdombox.ru/flextools/trunk@8572 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowTitleBarSkin.mxml
@@ -51,12 +51,6 @@
 			{
 				return exclusions;
 			}
-
-
-			protected function closeButton_clickHandler( event : MouseEvent ) : void
-			{
-				NativeApplication.nativeApplication.exit();
-			}
 		
 		]]>
 
@@ -124,7 +118,8 @@
 	<s:HGroup right="16" top="12" height="100%" minWidth="40" minHeight="20" gap="10">
 		<!-- minimize button -->
 		<s:Button id="minimizeButton"
-				  bottom="2" skinClass="net.vdombox.ide.common.view.skins.button.MainMinimizeBtnSkin" verticalCenter="0"/>
+				  bottom="2" 
+				  skinClass="net.vdombox.ide.common.view.skins.button.MainMinimizeBtnSkin" verticalCenter="0"/>
 		
 		<!-- close button -->
 		<s:Button id="logoutButton" 
@@ -133,12 +128,14 @@
 		
 		<!-- maximize button -->
 		<s:Button id="maximizeButton"
-				  skinClass="net.vdombox.ide.common.view.skins.button.MainMaximizeBtnSkin" skinClass.maximizedGroup="net.vdombox.ide.common.view.skins.button.MainRestoreBtnSkin" verticalCenter="0"/>
+				  skinClass="net.vdombox.ide.common.view.skins.button.MainMaximizeBtnSkin" 
+				  skinClass.maximizedGroup="net.vdombox.ide.common.view.skins.button.MainRestoreBtnSkin"
+				  verticalCenter="0"/>
 		
 		<!-- close button -->
 		<s:Button id="closeButton"
 				  skinClass="net.vdombox.ide.common.view.skins.button.MainCloseBtnSkin" verticalCenter="0"
-				  mouseDown="closeButton_clickHandler(event)"/>	
+				  mouseDown="dispatchEvent( new MainWindowEvent( MainWindowEvent.CLOSE ) )"/>	
 	</s:HGroup>
 	
 	
