git-svn-id: http://svn.vdombox.ru/flextools/trunk@8576 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -312,7 +312,7 @@
 					for each ( var xmlCell:XML in xmlRow.cell ) 
 					{
 						if ( serverVersion && serverVersion >= "1.3.8535" )
-							tableRow[ dataGridColumns[ cellIndex ].dataField ] = xmlCell.toString();
+							tableRow[ dataGridColumns[ cellIndex ].dataField ] = StringUtils.fromHtmlEnc(  xmlCell.toString() );
 						else
 							tableRow[ dataGridColumns[ cellIndex ].dataField ] = StringUtils.toHtmlEnc( xmlCell.toString() );
 						
@@ -536,6 +536,7 @@
 				for each ( item in dataGridProvider )
 				{
 					requestXMLParam = getXMLByRow( item );
+					
 					for  ( var tt : String in item )
 					{
 						
