--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/BoldSearchItemRenderer.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/BoldSearchItemRenderer.mxml
@@ -22,7 +22,7 @@
 				
 				super.data = value;
 				
-				textArea.text = StringUtils.fromHtmlEnc( value[DataGridListData(listData).dataField] );
+				textArea.text = value[DataGridListData(listData).dataField];
 			}
 			
 			override public function validateProperties():void
