--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/TextToolbar.mxml
@@ -13,6 +13,7 @@
 			import mx.collections.IViewCursor;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
+			import mx.controls.RichTextEditor;
 			import mx.core.UIComponent;
 			import mx.events.ColorPickerEvent;
 			import mx.managers.IFocusManagerComponent;
@@ -295,6 +296,8 @@
 						weightButton.selected = true;
 					else
 						weightButton.selected = false;
+					
+					
 				}
 
 				if ( attributesObject.hasOwnProperty( "fontstyle" ) && attributesObject[ "fontstyle" ] != null )
